--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -18,7 +18,7 @@ jobs:
           version: 9
           run_install: false
       - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+        run: pnpm add --global vercel@latest
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
