--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@keystatic/next": "^5.0.1",
     "@markdoc/markdoc": "^0.4.0",
     "@mdx-js/mdx": "^3.1.0",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react": "18.3.8",
     "@types/react-dom": "18.3.0",
