--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/mdx": "^3.1.0",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/react": "18.3.8",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
